fixes bug 311266 "Separate IO errors into READ and WRITE errors" r=beng,mscott