toolkit/mozapps/update/src/updater/errors.h
@@ -41,12 +41,12 @@
 
 #define OK 0
 #define MEM_ERROR 1
-#define IO_ERROR 2
+// #define IO_ERROR 2  // Use READ_ERROR or WRITE_ERROR instead
 #define USAGE_ERROR 3
 #define CRC_ERROR 4
 #define PARSE_ERROR 5
-#define SOURCE_ERROR 6
-#define TARGET_ERROR 7
+#define READ_ERROR 6
+#define WRITE_ERROR 7
 #define UNEXPECTED_ERROR 8
 
 #endif  // Errors_h__
